                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-05-2005 changed: Seek moved onto the right thumb stick - less clashes.
  - 05-05-2005 added: Code support for volume bar in video OSD audio submenu - needs skinning.
  - 05-05-2005 fixed: Videos Original Size view wasn't initialized properly.
  - 05-05-2005 changed: Scripts/Programs windows now use ViewControl.
  - 05-05-2005 added: Musepack codec to paplayer.
  - 05-05-2005 fixed: .m3u was detected as a valid underlying media file for .cue sheets
  - 05-05-2005 added: Seek bar enabled - move left/right on left thumb stick.
  - 05-05-2005 updated: Chinese (Simple) language file (Thnx to iikii)
  - 05-05-2005 updated: Polish language file (Thnx to napek)
  - 05-05-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-05-2005 changed: temp filename for audio scrobbler cache
  - 05-05-2005 fixed: archive class couldn't save very long strings
  - 05-05-2005 added: ogg codec for paplayer
  - 05-05-2005 fixed: subtitle/audiostream stream selection from xbmc osd in dvdplayer should now be working and remembered. 
  - 05-05-2005 changed: dvd audiostream selection from dvdmenu reworked. more stable than last solution.
  - 04-05-2005 changed: SectionLoader can now load/unload dll's on demand - for preloading dlls that will be needed repeatedly.
  - 04-05-2005 added: APEv2 tag reading in APE/MP3 files, including ReplayGain info.  Requires MACDll.dll to be present.
  - 04-05-2005 fixed: APE wasn't part of the default music extensions.
  - 03-05-2005 added: basic authentication support to http reader. means authed rss feeds, authed internet playlists (thou the streams themself might not be authed). 